--- a/themes/bene_parent/sass/components/_embedded-content.scss
+++ b/themes/bene_parent/sass/components/_embedded-content.scss
@@ -9,19 +9,42 @@ figure {
 
 //Images align-center
 .embedded-entity.align-center{
-  width: auto;
-  margin: 0 auto;
+  width: 100%;
   max-width: 100%;
+
+  @include mq(mobile) {
+    width: auto;
+    margin: 0 auto;
+    max-width: 100%;
+  }
+  
+  img { width: 100%;}
 }
 
 //Images align-left
 .embedded-entity.align-left{
-  margin: 0 20px 20px 0;
-  max-width: 50%;
+  max-width: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+
+  @include mq(desktop) {
+    margin: 0 20px 20px 0;
+    max-width: 50%;
+  }
+
+  img { width: 100%;}
 }
 
 //Images align-right
 .embedded-entity.align-right{
-  margin: 20px 0 0 20px;
-  max-width: 50%;
+  max-width: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+
+  @include mq(desktop) {
+    margin: 20px 0 0 20px;
+    max-width: 50%;
+  }
+
+  img { width: 100%;}
 }
